bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value isOverR
  if (isOverR()){
      ^BDR:6: error: not found: value isOverL
  else if (isOverL()){
           ^BDR:10: error: not found: value isOverI
  else if (isOverI()){
           ^BDR:15: error: not found: value isOverB
  else if (isOverB()){
           ^BDR:20: error: not found: value isOverC
  else if (isOverC()){
           ^BDR:25: error: not found: value isOverZ
  else if (isOverZ()){
           ^BDR:28: error: not found: value isOverY
  else if (isOverY()){
           ^BDR:32: error: not found: value isOverX
  else if(isOverX()){
          ^