bdr.BDR.scala.code
while (isOverMessage()) {
  if (isOverR()){
    right()
  }
  
  else if (isOverL()){
    left()
  }
  
  else if (isOverI()){
    back()
    forward()
  }
  
  else if (isOverB()){
    forward()
    forward()
  }
  
  else if (isOverC()){
    forward()
    forward()
    forward()
  }
  else if (isOverZ()){
    backward()
  }
  else if (isOverY()){
    backward()
    backward()
  }
  else if(isOverX()){
    backward()
    backward()
    backward()
  }
  
}
